【新增】全新的gitignore；最基础的暴力cuda计算最短距离算法；低模版本的bunney和alien用于测试。
使用低模版本的bunney和alien：
暴力cuda计算：160ms左右；
暴力cpu计算：50ms左右；
推测是分配cuda显存的时间太长，以至于抵消了并行计算的加速，反而更慢。

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,52 @@
 CudaRuntime1/Debug/
 CudaRuntime1/CudaHomeWork01/.
 CudaRuntime1/.vs/
+
+!CudaRuntime1/data/
+
+# Visual Studio
+.vs/
+*.vcxproj.user
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Build folders
+**/Debug/
+**/Release/
+**/x64/Debug/
+**/x64/Release/
+**/build/
+**/out/
+
+# Compiled binaries
+*.exe
+*.dll
+*.lib
+*.exp
+
+# Object files
+*.obj
+*.o
+*.lo
+*.a
+*.la
+
+# CUDA intermediate files
+*.cache
+*.cu.d
+*.pdb
+*.idb
+*.tlog
+*.ipdb
+*.iobj
+
+# Generated logs
+*.log
+
+# CMake (如果你未来用到)
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
