--- a/CudaRuntime1/CudaRuntime1.vcxproj
+++ b/CudaRuntime1/CudaRuntime1.vcxproj
@@ -69,7 +69,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>E:\freeglut\include;D:\cuda\cuda-samples-master\Samples;D:\OpenCV\opencv\build\include;D:\cuda\cuda-samples-master\Common;$(IncludePath)</IncludePath>
+    <IncludePath>E:\freeglut\include;D:\cuda\cuda-samples-master\Samples;D:\OpenCV\opencv\build\include;$(CudaToolkitIncludeDir)\cccl;D:\cuda\cuda-samples-master\Common;$(IncludePath)</IncludePath>
     <LibraryPath>E:\freeglut\lib;D:\cuda\CUDA 13\lib;E:\Microsoft Visual Studio Projects\CudaHomework01\CudaRuntime1\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -78,7 +78,7 @@
     <LibraryPath>D:\cuda\CUDA 13\lib;E:\Microsoft Visual Studio Projects\CudaHomework01\CudaRuntime1\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>E:\freeglut\include;D:\cuda\cuda-samples-master\Samples;D:\OpenCV\opencv\build\include;D:\cuda\cuda-samples-master\Common;$(IncludePath)</IncludePath>
+    <IncludePath>E:\freeglut\include;D:\cuda\cuda-samples-master\Samples;D:\OpenCV\opencv\build\include;$(CudaToolkitIncludeDir)\cccl;D:\cuda\cuda-samples-master\Common;$(IncludePath)</IncludePath>
     <LibraryPath>E:\freeglut\lib;D:\cuda\CUDA 13\lib;E:\Microsoft Visual Studio Projects\CudaHomework01\CudaRuntime1\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -89,8 +89,9 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;WIN64;_DEBUG;_CONSOLE;%(PreprocessorDefinitions);</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;WIN64;NON_PROF;_DEBUG;_CONSOLE;%(PreprocessorDefinitions);</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>E:\Microsoft Visual Studio Projects\CudaHomework01\CudaRuntime1\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>Default</LanguageStandard>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -125,8 +126,9 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;WIN64;NDEBUG;_CONSOLE;%(PreprocessorDefinitions);</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;WIN64;NON_PROF;NDEBUG;_CONSOLE;%(PreprocessorDefinitions);</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>E:\Microsoft Visual Studio Projects\CudaHomework01\CudaRuntime1\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>Default</LanguageStandard>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
